<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="16dp"
        android:text="@string/dart1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="84dp"
        android:text="@string/dart2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="159dp"
        android:text="@string/dart3" />

    <EditText
        android:id="@+id/txtDart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="20" />

    <EditText
        android:id="@+id/txtDart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="5" />

    <EditText
        android:id="@+id/txtDart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="60" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="33dp"
        android:onClick="calcAndReturn"
        android:text="@string/calculateScore" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button"
        android:layout_below="@+id/textView"
        android:text="@string/score" />

    <TextView
        android:id="@+id/txtCurrentScore"
        android:layout_width="83dp"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/txtDart1"
        android:layout_alignEnd="@+id/button"
        android:text="0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtThrownScore"
        android:layout_alignTop="@+id/textView3"
        android:text="@string/thrownScore" />

    <TextView
        android:id="@+id/txtThrownScore"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:text="0" />

    <TextView
        android:id="@+id/txtNewScore"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignTop="@+id/textView4"
        android:text="0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="133dp"
        android:text="@string/newScore" />

    <Button
        android:id="@+id/txtAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="39dp"
        android:onClick="addScore"
        android:text="@string/add" />
</RelativeLayout>